# unmess-me

./: .dockerignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  prospector.yaml  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_tvshow.py  0003_interiordesigner_delete_movie_delete_tvshow.py
myapiproject/: asgi.py  settings.py  urls.py  wsgi.py
ui/: index.html  package.json
ui/src/: App.tsx
ui/src/components/spinner/: index.tsx  path.ts
